@@ -1,3 +1,8 @@
+2006-05-23  Sven Panne  <sven.panne@aedion.de>
+
+	* src/alc/alc_context.c: Faked device enumeration a bit. Announce
+	ALC_ENUMERATION_EXT and ALC_EXT_CAPTURE extensions.
+
 2006-05-12  Sven Panne  <sven.panne@aedion.de>
 
 	* src/al_state.c(alGetString): Following our recent change in the
